--- a/video/player_template.html
+++ b/video/player_template.html
@@ -8,18 +8,27 @@
 <style>
 body {
     font-family: Arial, sans-serif;
-    text-align: center;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
 }
 .container {
-    max-width: 800px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1200px;
     margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
+    gap: 20px;
+}
+.left-panel {
+    flex: 1 1 700px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.cover img {
+    width: 100%;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
 .player {
     position: relative;
@@ -31,36 +40,8 @@ body {
 #video {
     width: 100%;
     height: auto;
-    max-height: 70vh;      /* PC端竖屏视频限制高度 */
-    display: block;
-    border-radius: 8px;
-    object-fit: contain;    /* 保持比例，不拉伸 */
-}
-.nav-buttons {
-    margin: 10px 0;
-}
-.nav-buttons button {
-    padding: 10px 20px;
-    margin: 0 5px;
-    font-size: 1em;
-    cursor: pointer;
-}
-.playlist button {
-    padding: 5px 10px;
-    margin: 3px;
-    cursor: pointer;
-}
-.playlist button.active {
-    background-color: #007bff;
-    color: white;
-}
-.details {
-    text-align: left;
-    margin-top: 15px;
-}
-.details h1 {
-    font-size: 1.8em;
-    color: #333;
+    max-height: 70vh;
+    object-fit: contain;
 }
 #overlay {
     position: absolute;
@@ -76,48 +57,110 @@ body {
     opacity: 0;
     transition: opacity 0.3s;
 }
-@media (min-aspect-ratio: 1/1) {
-    /* 横屏视频最大高度 */
-    #video { max-height: 80vh; }
+.right-panel {
+    flex: 0 0 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
-@media (max-aspect-ratio: 1/1) {
-    /* 竖屏视频最大高度 */
-    #video { max-height: 60vh; }
+.playlist {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+.playlist button {
+    padding: 5px 10px;
+    cursor: pointer;
+}
+.playlist button.active {
+    background-color: #007bff;
+    color: white;
+}
+.details {
+    background: #fff;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+.details h1 {
+    font-size: 1.5em;
+    margin: 0 0 10px;
+}
+.details p {
+    margin: 5px 0;
+}
+#descriptionModal {
+    display: none;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.6);
+    align-items: center;
+    justify-content: center;
+}
+#descriptionModal .modal-content {
+    background: #fff;
+    padding: 20px;
+    max-width: 600px;
+    border-radius: 8px;
+}
+#descriptionModal button {
+    margin-top: 10px;
+    padding: 5px 10px;
+}
+@media (max-width: 900px) {
+    .container {
+        flex-direction: column;
+    }
+    .right-panel {
+        flex: 1 1 100%;
+    }
 }
 </style>
 </head>
 <body>
 
 <div class="container">
-  <div class="player">
-    <video id="video" controls playsinline webkit-playsinline x5-playsinline></video>
-    <div id="overlay"></div>
-  </div>
-
-  <div class="nav-buttons">
-    <button id="prev">上一集</button>
-    <button id="next">下一集</button>
-  </div>
-
-  <div class="playlist" id="playlist"></div>
-
-  <div class="details">
-    <h1 id="title">剧名 - 集数</h1>
-    <p><strong>状态:</strong> <span id="status"></span></p>
-    <p><strong>类别:</strong> <span id="category"></span></p>
-    <p><strong>导演:</strong> <span id="director"></span></p>
-    <p><strong>主演:</strong> <span id="actors"></span></p>
-    <p><strong>国家/语言/年代:</strong> <span id="meta"></span></p>
-    <p><strong>剧情介绍:</strong></p>
-    <p id="description"></p>
-  </div>
+    <div class="left-panel">
+        <div class="cover">
+            <img id="coverImg" src="" alt="封面">
+        </div>
+        <div class="player">
+            <video id="video" controls playsinline webkit-playsinline x5-playsinline></video>
+            <div id="overlay"></div>
+        </div>
+    </div>
+    <div class="right-panel">
+        <div class="nav-buttons">
+            <button id="prev">上一集</button>
+            <button id="next">下一集</button>
+        </div>
+        <div class="playlist" id="playlist"></div>
+        <div class="details">
+            <h1 id="title">剧名 - 集数</h1>
+            <p><strong>状态:</strong> <span id="status"></span></p>
+            <p><strong>类别:</strong> <span id="category"></span></p>
+            <p><strong>导演:</strong> <span id="director"></span></p>
+            <p><strong>主演:</strong> <span id="actors"></span></p>
+            <p><strong>国家/语言/年代:</strong> <span id="meta"></span></p>
+            <p><strong>剧情介绍:</strong> <a href="#" id="showDescription">点击查看</a></p>
+        </div>
+    </div>
 </div>
 
-<!-- 动态加载剧集数据 -->
+<!-- 弹窗 -->
+<div id="descriptionModal">
+    <div class="modal-content">
+        <p id="description"></p>
+        <button onclick="document.getElementById('descriptionModal').style.display='none'">关闭</button>
+    </div>
+</div>
+
 <script>
 const video = document.getElementById('video');
 const playlist = document.getElementById('playlist');
 const overlay = document.getElementById('overlay');
+const coverImg = document.getElementById('coverImg');
 const titleEl = document.getElementById('title');
 const statusEl = document.getElementById('status');
 const categoryEl = document.getElementById('category');
@@ -125,6 +168,7 @@ const directorEl = document.getElementById('director');
 const actorsEl = document.getElementById('actors');
 const metaEl = document.getElementById('meta');
 const descriptionEl = document.getElementById('description');
+const showDescription = document.getElementById('showDescription');
 
 let episodes = {};
 let seriesInfo = {};
@@ -152,7 +196,6 @@ function initPlayer() {
     return;
   }
 
-  // 填充信息
   titleEl.textContent = seriesInfo.title || "剧名";
   statusEl.textContent = seriesInfo.status || "";
   categoryEl.textContent = seriesInfo.category || "";
@@ -160,6 +203,15 @@ function initPlayer() {
   actorsEl.textContent = seriesInfo.actors || "";
   metaEl.textContent = seriesInfo.meta || "";
   descriptionEl.textContent = seriesInfo.description || "";
+
+  // 设置封面
+  if(seriesInfo.cover_local_url) coverImg.src = seriesInfo.cover_local_url;
+
+  // 点击简介弹窗
+  showDescription.onclick = function() {
+      document.getElementById('descriptionModal').style.display = 'flex';
+      return false;
+  };
 
   // 生成集数按钮
   Object.entries(episodes).forEach(([ep, url], index) => {
@@ -169,7 +221,6 @@ function initPlayer() {
     playlist.appendChild(btn);
   });
 
-  // 默认播放第一集
   const firstBtn = playlist.querySelector('button');
   if(firstBtn){
       firstBtn.classList.add('active');
