--- a/video/player_template.html
+++ b/video/player_template.html
@@ -7,30 +7,24 @@
 <script src="https://cdn.jsdelivr.net/npm/hls.js@1.5.1/dist/hls.min.js"></script>
 <style>
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    font-family: Arial, sans-serif;
     background-color: #f4f4f4;
 }
 .container {
     display: flex;
-    flex-wrap: wrap;
     max-width: 1200px;
     margin: 20px auto;
     gap: 20px;
 }
+/* 左侧视频区域 */
 .left-panel {
-    flex: 1 1 700px;
+    flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 15px;
 }
-.cover img {
-    width: 100%;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-}
-.player {
+.video-wrapper {
     position: relative;
     width: 100%;
     background: #000;
@@ -39,9 +33,9 @@ body {
 }
 #video {
     width: 100%;
-    height: auto;
-    max-height: 70vh;
+    height: 480px; /* 固定视频高度 */
     object-fit: contain;
+    border-radius: 8px;
 }
 #overlay {
     position: absolute;
@@ -57,12 +51,37 @@ body {
     opacity: 0;
     transition: opacity 0.3s;
 }
+/* 视频下方按钮 */
+.video-controls {
+    margin-top: 10px;
+    display: flex;
+    gap: 10px;
+}
+.video-controls button {
+    padding: 5px 15px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+/* 右侧面板 */
 .right-panel {
-    flex: 0 0 300px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
+/* 封面 */
+.right-panel .cover {
+    text-align: center;
+}
+.right-panel .cover img {
+    width: 150px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+}
+/* 剧集列表 */
 .playlist {
     display: flex;
     flex-wrap: wrap;
@@ -76,14 +95,17 @@ body {
     background-color: #007bff;
     color: white;
 }
+/* 详情 */
 .details {
     background: #fff;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    max-height: 400px;
+    overflow-y: auto;
 }
 .details h1 {
-    font-size: 1.5em;
+    font-size: 1.3em;
     margin: 0 0 10px;
 }
 .details p {
@@ -95,13 +117,16 @@ body {
     top: 0; left: 0;
     width: 100%; height: 100%;
     background: rgba(0,0,0,0.6);
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-end;
+    padding: 20px;
 }
 #descriptionModal .modal-content {
     background: #fff;
+    width: 300px;
+    height: 100%;
+    overflow-y: auto;
     padding: 20px;
-    max-width: 600px;
     border-radius: 8px;
 }
 #descriptionModal button {
@@ -113,7 +138,16 @@ body {
         flex-direction: column;
     }
     .right-panel {
-        flex: 1 1 100%;
+        width: 100%;
+    }
+    #descriptionModal {
+        align-items: center;
+        justify-content: center;
+    }
+    #descriptionModal .modal-content {
+        width: 90%;
+        height: auto;
+        max-height: 70%;
     }
 }
 </style>
@@ -122,18 +156,19 @@ body {
 
 <div class="container">
     <div class="left-panel">
-        <div class="cover">
-            <img id="coverImg" src="" alt="封面">
-        </div>
-        <div class="player">
+        <div class="video-wrapper">
             <video id="video" controls playsinline webkit-playsinline x5-playsinline></video>
             <div id="overlay"></div>
         </div>
-    </div>
-    <div class="right-panel">
-        <div class="nav-buttons">
+        <div class="video-controls">
             <button id="prev">上一集</button>
             <button id="next">下一集</button>
+        </div>
+    </div>
+
+    <div class="right-panel">
+        <div class="cover">
+            <img id="coverImg" src="" alt="封面">
         </div>
         <div class="playlist" id="playlist"></div>
         <div class="details">
@@ -148,7 +183,7 @@ body {
     </div>
 </div>
 
-<!-- 弹窗 -->
+<!-- 弹出右侧简介 -->
 <div id="descriptionModal">
     <div class="modal-content">
         <p id="description"></p>
@@ -174,28 +209,24 @@ let episodes = {};
 let seriesInfo = {};
 let currentIndex = 0;
 
-// 获取 URL ?series=xxx
 function getSeriesName() {
   const params = new URLSearchParams(window.location.search);
   return params.get('series') || 'default';
 }
 
-// 动态加载 JS 数据文件
 function loadSeriesData(seriesName) {
   const script = document.createElement('script');
-  script.src = "2025/" + seriesName + "_data.js";  // 数据路径
+  script.src = "2025/" + seriesName + "_data.js";
   script.onload = () => initPlayer();
   script.onerror = () => alert("剧集数据加载失败: " + seriesName);
   document.body.appendChild(script);
 }
 
-// 初始化播放器
 function initPlayer() {
   if (!episodes || Object.keys(episodes).length === 0) {
     alert("当前剧集没有数据");
     return;
   }
-
   titleEl.textContent = seriesInfo.title || "剧名";
   statusEl.textContent = seriesInfo.status || "";
   categoryEl.textContent = seriesInfo.category || "";
@@ -204,16 +235,13 @@ function initPlayer() {
   metaEl.textContent = seriesInfo.meta || "";
   descriptionEl.textContent = seriesInfo.description || "";
 
-  // 设置封面
   if(seriesInfo.cover_local_url) coverImg.src = seriesInfo.cover_local_url;
 
-  // 点击简介弹窗
   showDescription.onclick = function() {
       document.getElementById('descriptionModal').style.display = 'flex';
       return false;
   };
 
-  // 生成集数按钮
   Object.entries(episodes).forEach(([ep, url], index) => {
     const btn = document.createElement('button');
     btn.textContent = ep;
@@ -228,7 +256,6 @@ function initPlayer() {
   }
 }
 
-// 加载指定集数
 function loadEpisode(index, btn) {
   const url = Object.values(episodes)[index];
   if (!url) return;
@@ -249,7 +276,6 @@ function loadEpisode(index, btn) {
   updateOverlay();
 }
 
-// 上一集 / 下一集
 document.getElementById('prev').onclick = () => {
   if (currentIndex > 0) loadEpisode(currentIndex - 1, playlist.children[currentIndex - 1]);
 };
@@ -257,17 +283,14 @@ document.getElementById('next').onclick = () => {
   if (currentIndex < Object.keys(episodes).length - 1) loadEpisode(currentIndex + 1, playlist.children[currentIndex + 1]);
 };
 
-// 更新暂停浮层
 function updateOverlay() {
   const epName = Object.keys(episodes)[currentIndex];
   overlay.textContent = (seriesInfo.title || "剧名") + " - " + epName;
 }
 
-// 视频事件
 video.addEventListener('pause', () => overlay.style.opacity = 1);
 video.addEventListener('play', () => overlay.style.opacity = 0);
 
-// 手机左右滑动切集
 let touchStartX = 0;
 let touchEndX = 0;
 const swipeThreshold = 50;
@@ -281,7 +304,6 @@ video.addEventListener('touchend', e => {
   }
 });
 
-// 加载指定剧集数据
 loadSeriesData(getSeriesName());
 </script>
 
