--- a/AV/index.html
+++ b/AV/index.html
@@ -23,38 +23,55 @@
     width: 100%;
     height: 100%;
     background: var(--bg-url) center center / cover no-repeat;
-    filter: brightness(0.3); /* 灰暗 */
-    opacity: 0.6;            /* 半透明 */
+    filter: brightness(0.3);
+    opacity: 0.6;
     z-index: -1;
   }
 
-  /* 背景暗影框 */
   .container {
-      width: 100%;           
-      min-height: 100vh;     
-      padding: 50px 80px;    
-      background: rgba(0,0,0,0.6);
-      border-radius: 0;      
-      box-sizing: border-box;
+    width: 100%;
+    min-height: 100vh;
+    padding: 50px 80px;
+    background: rgba(0,0,0,0.6);
+    box-sizing: border-box;
   }
 
   .profile {
-    display: flex;      
-    gap: 20px;          
+    display: flex;
+    gap: 20px;
   }
 
   .profile img {
-    width: 350px;        
-    height: auto;        
+    width: 350px;
+    height: auto;
     border-radius: 10px;
     display: block;
   }
 
   .info { flex: 1; }
   .info h1 { margin: 0; font-size: 28px; }
-  .features span { display: inline-block; background: #ff9800; color: #000; padding: 2px 8px; margin: 2px; border-radius: 4px; font-size: 12px; }
-  .gallery { margin-top: 20px; display: grid; grid-template-columns: repeat(auto-fill, minmax(200px,1fr)); gap: 10px; }
-  .gallery img { width: 100%; border-radius: 6px; display: block; }
+  .features span {
+    display: inline-block;
+    background: #ff9800;
+    color: #000;
+    padding: 2px 8px;
+    margin: 2px;
+    border-radius: 4px;
+    font-size: 12px;
+  }
+
+  .gallery {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+    gap: 10px;
+  }
+
+  .gallery img {
+    width: 100%;
+    border-radius: 6px;
+    display: block;
+  }
 </style>
 </head>
 <body>
@@ -76,32 +93,32 @@
       <p>详情页: <a id="detail_url" href="" target="_blank"></a></p>
     </div>
   </div>
+
   <div class="description">
     <h2>简介</h2>
     <p id="description"></p>
   </div>
+
   <div class="gallery" id="gallery"></div>
 </div>
 
 <script>
-// 动态加载剧集数据 JS 文件
-function loadSeriesData(seriesName) {
-  const script = document.createElement('script');
-  script.src = "2025/" + seriesName + "_AVactress_data.js"; // JS 文件路径
-  script.onload = () => initPage();              // 加载完成后初始化页面
-  script.onerror = () => alert("剧集数据加载失败: " + seriesName);
-  document.body.appendChild(script);
-}
- 
 // 从 URL 获取 series 参数
 function getSeriesName() {
   const params = new URLSearchParams(window.location.search);
   return params.get('series') || '1'; // 默认 1
 }
-const seriesName = getSeriesName();
-loadSeriesData(seriesName);
 
-// 初始化页面函数
+// 动态加载 JS 数据文件
+function loadSeriesData(seriesName) {
+  const script = document.createElement('script');
+  script.src = "2025/" + seriesName + "_AVactress_data.js"; // 目录 + 文件名
+  script.onload = () => initPage();
+  script.onerror = () => alert("剧集数据加载失败: " + seriesName);
+  document.body.appendChild(script);
+}
+
+// 初始化页面
 function initPage() {
   if (!window.actressData) {
     console.error("actressData 未定义");
@@ -117,7 +134,7 @@ function initPage() {
   const profileImg = document.getElementById("profile-img");
   profileImg.src = actressData.img_url;
   profileImg.alt = actressData.name;
-  profileImg.onerror = function(){ profileImg.style.display = 'none'; };
+  profileImg.onerror = () => profileImg.style.display = 'none';
 
   document.getElementById("name").textContent = actressData.name;
   document.getElementById("age").textContent = actressData.age;
@@ -131,7 +148,7 @@ function initPage() {
 
   // features
   const featuresDiv = document.getElementById("features");
-  featuresDiv.innerHTML = ""; 
+  featuresDiv.innerHTML = "";
   actressData.features.forEach(f => {
     const span = document.createElement("span");
     span.textContent = f;
@@ -148,15 +165,19 @@ function initPage() {
 
   // gallery
   const galleryDiv = document.getElementById("gallery");
-  galleryDiv.innerHTML = ""; 
+  galleryDiv.innerHTML = "";
   actressData.gallery.forEach(url => {
     const img = document.createElement("img");
     img.src = url;
     img.alt = "写真图集";
-    img.onerror = function(){ img.style.display = 'none'; };
+    img.onerror = () => img.style.display = 'none';
     galleryDiv.appendChild(img);
   });
 }
+
+// 执行加载
+const seriesName = getSeriesName();
+loadSeriesData(seriesName);
 </script>
 
 </body>
