--- a/AV/index.html
+++ b/AV/index.html
@@ -3,181 +3,125 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>女优详情</title>
+<title>连续剧首页</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    color: #fff;
-    position: relative;
-    min-height: 100vh;
-    overflow-x: hidden;
-  }
+body {
+  margin: 0;
+  font-family: "微软雅黑", sans-serif;
+  background-color: #0d0d0d;
+  color: #fff;
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+}
 
-  /* 背景图 */
-  body::before {
-    content: "";
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--bg-url) center center / cover no-repeat;
-    filter: brightness(0.3);
-    opacity: 0.6;
-    z-index: -1;
-  }
+/* 左侧导航栏 */
+.sidebar {
+  width: 200px;
+  background-color: #111;
+  border-right: 1px solid #222;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.sidebar h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 18px;
+}
+.sidebar button {
+  background: none;
+  color: #ccc;
+  border: none;
+  text-align: left;
+  padding: 12px 20px;
+  font-size: 15px;
+  cursor: pointer;
+}
+.sidebar button:hover,
+.sidebar button.active {
+  background-color: #222;
+  color: #fff;
+}
 
-  .container {
-    width: 100%;
-    min-height: 100vh;
-    padding: 50px 80px;
-    background: rgba(0,0,0,0.6);
-    box-sizing: border-box;
-  }
-
-  .profile {
-    display: flex;
-    gap: 20px;
-  }
-
-  .profile img {
-    width: 350px;
-    height: auto;
-    border-radius: 10px;
-    display: block;
-  }
-
-  .info { flex: 1; }
-  .info h1 { margin: 0; font-size: 28px; }
-  .features span {
-    display: inline-block;
-    background: #ff9800;
-    color: #000;
-    padding: 2px 8px;
-    margin: 2px;
-    border-radius: 4px;
-    font-size: 12px;
-  }
-
-  .gallery {
-    margin-top: 20px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
-    gap: 10px;
-  }
-
-  .gallery img {
-    width: 100%;
-    border-radius: 6px;
-    display: block;
-  }
+/* 主内容区域 */
+.main {
+  flex: 1;
+  overflow-y: auto;
+  padding: 20px;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  gap: 20px;
+}
+.card {
+  background-color: #1a1a1a;
+  border-radius: 8px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 12px rgba(255,255,255,0.2);
+}
+.card img {
+  width: 100%;
+  height: 260px;
+  object-fit: cover;
+}
+.card-title {
+  padding: 10px;
+  font-size: 15px;
+  text-align: center;
+  color: #eee;
+}
 </style>
 </head>
 <body>
 
-<div class="container">
-  <div class="profile">
-    <img id="profile-img" src="" alt="">
-    <div class="info">
-      <h1 id="name"></h1>
-      <p>年龄: <span id="age"></span></p>
-      <p>生日: <span id="birthday"></span></p>
-      <p>星座: <span id="zodiac"></span></p>
-      <p>身高: <span id="height"></span></p>
-      <p>三围: <span id="measurements"></span></p>
-      <p>罩杯: <span id="cup"></span></p>
-      <p>作品数量: <span id="works_count"></span></p>
-      <div class="features" id="features"></div>
-      <p>别名: <span id="aliases"></span></p>
-      <p>详情页: <a id="detail_url" href="" target="_blank"></a></p>
-    </div>
-  </div>
-
-  <div class="description">
-    <h2>简介</h2>
-    <p id="description"></p>
-  </div>
-
-  <div class="gallery" id="gallery"></div>
+<div class="main">
+  <div class="grid" id="dramaGrid"></div>
 </div>
 
 <script>
-// 从 URL 获取 series 参数
-function getSeriesName() {
-  const params = new URLSearchParams(window.location.search);
-  return params.get('series') || '1'; // 默认 1
+
+let dramas = [];
+
+async function loadDramas() {
+  const res = await fetch("https://raw.githubusercontent.com/erik7761269084-arch/-/main/AV/category/2025_dl_lxj.json");
+  dramas = await res.json();
+  renderDramas(dramas);
 }
 
-// 动态加载 JS 数据文件
-function loadSeriesData(seriesName) {
-  const script = document.createElement('script');
-  script.src = "2025/" + seriesName + "_AVactress_data.js"; // 目录 + 文件名
-  script.onload = () => initPage();
-  script.onerror = () => alert("剧集数据加载失败: " + seriesName);
-  document.body.appendChild(script);
-}
+loadDramas();
 
-// 初始化页面
-function initPage() {
-  if (!window.actressData) {
-    console.error("actressData 未定义");
-    return;
-  }
 
-  // 设置背景图
-  if (actressData.background_img) {
-    document.body.style.setProperty('--bg-url', `url('${actressData.background_img}')`);
-  }
-
-  // 填充信息
-  const profileImg = document.getElementById("profile-img");
-  profileImg.src = actressData.img_url;
-  profileImg.alt = actressData.name;
-  profileImg.onerror = () => profileImg.style.display = 'none';
-
-  document.getElementById("name").textContent = actressData.name;
-  document.getElementById("age").textContent = actressData.age;
-  document.getElementById("birthday").textContent = actressData.birthday_date;
-  document.getElementById("zodiac").textContent = actressData.zodiac;
-  document.getElementById("height").textContent = actressData.height;
-  document.getElementById("measurements").textContent = actressData.measurements;
-  document.getElementById("cup").textContent = actressData.cup;
-  document.getElementById("works_count").textContent = actressData.works_count || 0;
-  document.getElementById("description").textContent = actressData.description;
-
-  // features
-  const featuresDiv = document.getElementById("features");
-  featuresDiv.innerHTML = "";
-  actressData.features.forEach(f => {
-    const span = document.createElement("span");
-    span.textContent = f;
-    featuresDiv.appendChild(span);
-  });
-
-  // aliases
-  document.getElementById("aliases").textContent = actressData.aliases.join(", ");
-
-  // detail_url
-  const link = document.getElementById("detail_url");
-  link.href = actressData.detail_url;
-  link.textContent = actressData.detail_url;
-
-  // gallery
-  const galleryDiv = document.getElementById("gallery");
-  galleryDiv.innerHTML = "";
-  actressData.gallery.forEach(url => {
-    const img = document.createElement("img");
-    img.src = url;
-    img.alt = "写真图集";
-    img.onerror = () => img.style.display = 'none';
-    galleryDiv.appendChild(img);
+function renderDramas(list) {
+  const container = document.getElementById('dramaGrid');
+  container.innerHTML = '';
+  list.forEach(d => {
+    const card = document.createElement('div');
+    card.className = 'card';
+    card.onclick = () => window.location.href = d.title_play_url;
+    card.innerHTML = `
+      <img src="${d.cover_url}" alt="${d.title}">
+      <div class="card-title">${d.title}</div>
+    `;
+    container.appendChild(card);
   });
 }
 
-// 执行加载
-const seriesName = getSeriesName();
-loadSeriesData(seriesName);
+function filterCategory(cat) {
+  document.querySelectorAll('.sidebar button').forEach(b => b.classList.remove('active'));
+  event.target.classList.add('active');
+  if (cat === '全部') renderDramas(dramas);
+  else renderDramas(dramas.filter(d => d.category === cat));
+}
+
+// 初始加载
+renderDramas(dramas);
 </script>
 
 </body>
