--- a/AV/index.html
+++ b/AV/index.html
@@ -11,6 +11,7 @@ body {
   background-color: #0d0d0d;
   color: #fff;
   display: flex;
+  flex-direction: column;
   height: 100vh;
   overflow: hidden;
 }
@@ -31,16 +32,21 @@ body {
   border-radius: 8px;
   overflow: hidden;
   cursor: pointer;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  transition: transform 0.25s ease, box-shadow 0.25s ease, opacity 0.3s;
 }
 .card:hover {
   transform: scale(1.05);
   box-shadow: 0 4px 12px rgba(255,255,255,0.2);
 }
+.card:active {
+  transform: scale(0.96);
+  opacity: 0.8;
+}
 .card img {
   width: 100%;
   height: 260px;
   object-fit: cover;
+  background-color: #222;
 }
 .card-title {
   padding: 10px;
@@ -55,6 +61,44 @@ body {
   padding-bottom: 10px;
   line-height: 1.6;
 }
+
+/* 分页按钮样式 */
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  padding: 15px 0;
+  background-color: #111;
+  border-top: 1px solid #222;
+}
+button {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+}
+button:hover {
+  background-color: #555;
+}
+button:disabled {
+  background-color: #222;
+  color: #666;
+  cursor: not-allowed;
+}
+.page-info {
+  font-size: 14px;
+  color: #ccc;
+}
+
+/* 页面淡出动画 */
+.fade-out {
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
+}
 </style>
 </head>
 <body>
@@ -63,26 +107,54 @@ body {
   <div class="grid" id="actressGrid"></div>
 </div>
 
+<div class="pagination">
+  <button id="prevBtn">上一页</button>
+  <span class="page-info" id="pageInfo">第 1 页</span>
+  <button id="nextBtn">下一页</button>
+</div>
+
 <script>
 let actresses = [];
+let currentPage = 1;
+const pageSize = 20; // 每页显示20个女优
 
 // === 加载女优数据 ===
 async function loadActresses() {
-  const res = await fetch("https://raw.githubusercontent.com/erik7761269084-arch/-/main/AV/category/2025_AV_actress.json");
-  actresses = await res.json();
-  renderActresses(actresses);
+  try {
+    const res = await fetch("https://raw.githubusercontent.com/erik7761269084-arch/-/main/AV/category/2025_AV_actress.json");
+    const data = await res.json();
+    // 过滤掉无图片的女优
+    actresses = data.filter(a => a.img_url && a.img_url.trim() !== "");
+    renderActresses();
+  } catch (e) {
+    console.error("加载女优数据失败:", e);
+    const container = document.getElementById('actressGrid');
+    container.innerHTML = "<p style='text-align:center;color:#ccc;'>无法加载女优数据，请稍后再试。</p>";
+  }
 }
 
-// === 渲染女优卡片 ===
-function renderActresses(list) {
+// === 渲染当前页的女优卡片 ===
+function renderActresses() {
   const container = document.getElementById('actressGrid');
   container.innerHTML = '';
 
+  const start = (currentPage - 1) * pageSize;
+  const end = start + pageSize;
+  const list = actresses.slice(start, end);
+
   list.forEach(a => {
-    if (!a.img_url) return; // 跳过无图片
     const card = document.createElement('div');
     card.className = 'card';
-    card.onclick = () => alert(`查看 ${a.name} 的详情`);
+    card.onclick = () => {
+      if (a.actress_url && a.actress_url.trim() !== "") {
+        document.body.classList.add('fade-out');
+        setTimeout(() => {
+          window.location.href = a.actress_url;
+        }, 300); // 动画0.3秒后跳转
+      } else {
+        alert("该女优暂无详情页");
+      }
+    };
     card.innerHTML = `
       <img src="${a.img_url}" alt="${a.name}" onerror="this.style.display='none'">
       <div class="card-title">${a.name}</div>
@@ -94,7 +166,32 @@ function renderActresses(list) {
     `;
     container.appendChild(card);
   });
+
+  updatePagination();
 }
+
+// === 更新分页按钮状态 ===
+function updatePagination() {
+  const totalPages = Math.ceil(actresses.length / pageSize);
+  document.getElementById('pageInfo').textContent = `第 ${currentPage} 页 / 共 ${totalPages} 页`;
+  document.getElementById('prevBtn').disabled = currentPage === 1;
+  document.getElementById('nextBtn').disabled = currentPage === totalPages;
+}
+
+// === 翻页事件 ===
+document.getElementById('prevBtn').onclick = () => {
+  if (currentPage > 1) {
+    currentPage--;
+    renderActresses();
+  }
+};
+document.getElementById('nextBtn').onclick = () => {
+  const totalPages = Math.ceil(actresses.length / pageSize);
+  if (currentPage < totalPages) {
+    currentPage++;
+    renderActresses();
+  }
+};
 
 // === 初始加载 ===
 loadActresses();
