--- a/video/player_template.html
+++ b/video/player_template.html
@@ -24,18 +24,22 @@ body {
     display: flex;
     flex-direction: column;
 }
+
 .video-wrapper {
     position: relative;
     width: 100%;
+    padding-top: 56.25%;    /* 16:9比例，高度=宽度*0.5625   56.25%; */
     background: #000;
     border-radius: 8px;
     overflow: hidden;
 }
+
 #video {
+    position: absolute;
+    top: 0; left: 0;
     width: 100%;
-    height: 480px; /* 固定视频高度 */
+    height: 980px;
     object-fit: contain;
-    border-radius: 8px;
 }
 #overlay {
     position: absolute;
