--- a/video/player_template.html
+++ b/video/player_template.html
@@ -6,18 +6,22 @@
 <title>播放器 - 线上看</title>
 <script src="https://cdn.jsdelivr.net/npm/hls.js@1.5.1/dist/hls.min.js"></script>
 <style>
+
 body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #1a1a1a;  /* 深灰黑，比纯黑柔和 */
+    color: #eaeaea;  /* 白中带灰，护眼 */
 }
+
 .container {
     display: flex;
     max-width: 1800px;
     margin: 20px auto;
     gap: 20px;
 }
+
 /* 左侧视频区域 */
 .left-panel {
     flex: 1;
@@ -28,19 +32,23 @@ body {
 .video-wrapper {
     position: relative;
     width: 100%;
-    padding-top: 56.25%;    /* 16:9比例，高度=宽度*0.5625   56.25%; */
     background: #000;
-    border-radius: 8px;
-    overflow: hidden;
+    border-radius: 10px;
+    overflow: visible;
 }
 
 #video {
     position: absolute;
     top: 0; left: 0;
     width: 100%;
-    height: 980px;
+    height: auto;           /* 修复按钮显示问题 */
+    max-height: 900px;
     object-fit: contain;
+    border-radius: 10px;
+    display: block;
 }
+
+/* 播放中覆盖文字 */
 #overlay {
     position: absolute;
     top: 0; left: 0;
@@ -55,66 +63,101 @@ body {
     opacity: 0;
     transition: opacity 0.3s;
 }
+
 /* 视频下方按钮 */
 .video-controls {
     margin-top: 10px;
     display: flex;
     gap: 10px;
 }
+
 .video-controls button {
-    padding: 5px 15px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
+    padding: 6px 16px;
+    background-color: #333;
+    color: #f2f2f2;
+    border: 1px solid #555;
+    border-radius: 6px;
     cursor: pointer;
+    transition: background 0.2s, transform 0.1s;
 }
+
+.video-controls button:hover {
+    background-color: #555;
+    transform: scale(1.03);
+}
+
 /* 右侧面板 */
 .right-panel {
     width: 300px;
     display: flex;
     flex-direction: column;
     gap: 15px;
+    background-color: #202020;
+    border-radius: 10px;
+    padding: 12px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.4);
 }
+
 /* 封面 */
 .right-panel .cover {
     text-align: center;
 }
+
 .right-panel .cover img {
     width: 150px;
-    border-radius: 6px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(255,255,255,0.05);
 }
+
 /* 剧集列表 */
 .playlist {
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
+    gap: 6px;
 }
+
 .playlist button {
     padding: 5px 10px;
+    background: #2a2a2a;
+    border: 1px solid #444;
+    color: #ddd;
+    border-radius: 6px;
     cursor: pointer;
+    transition: all 0.2s;
 }
+
+.playlist button:hover {
+    background-color: #444;
+}
+
 .playlist button.active {
     background-color: #007bff;
-    color: white;
+    color: #fff;
 }
-/* 详情 */
+
+/* 详情卡片 */
 .details {
-    background: #fff;
-    padding: 10px;
+    background: #2a2a2a;
+    color: #f0f0f0;
+    padding: 12px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
     max-height: 400px;
     overflow-y: auto;
 }
+
 .details h1 {
     font-size: 1.3em;
     margin: 0 0 10px;
+    color: #fff;
 }
+
 .details p {
-    margin: 5px 0;
+    margin: 6px 0;
+    color: #ddd;
 }
+
+/* 剧情弹出框 */
 #descriptionModal {
     display: none;
     position: fixed;
@@ -125,18 +168,32 @@ body {
     justify-content: flex-end;
     padding: 20px;
 }
+
 #descriptionModal .modal-content {
-    background: #fff;
+    background: #2b2b2b;
+    color: #f2f2f2;
     width: 300px;
     height: 100%;
     overflow-y: auto;
     padding: 20px;
     border-radius: 8px;
+    box-shadow: 0 0 10px rgba(255,255,255,0.05);
 }
+
 #descriptionModal button {
     margin-top: 10px;
-    padding: 5px 10px;
+    padding: 6px 12px;
+    background: #444;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
 }
+
+#descriptionModal button:hover {
+    background: #666;
+}
+
 @media (max-width: 900px) {
     .container {
         flex-direction: column;
@@ -154,10 +211,11 @@ body {
         max-height: 70%;
     }
 }
+
 </style>
 </head>
 <body>
-
+<!-- ✅ 你的结构和脚本保持原样 -->
 <div class="container">
     <div class="left-panel">
         <div class="video-wrapper">
@@ -187,7 +245,6 @@ body {
     </div>
 </div>
 
-<!-- 弹出右侧简介 -->
 <div id="descriptionModal">
     <div class="modal-content">
         <p id="description"></p>
@@ -196,6 +253,7 @@ body {
 </div>
 
 <script>
+/* ✅ 保留你原始 JS 完全不变 */
 const video = document.getElementById('video');
 const playlist = document.getElementById('playlist');
 const overlay = document.getElementById('overlay');
@@ -310,6 +368,5 @@ video.addEventListener('touchend', e => {
 
 loadSeriesData(getSeriesName());
 </script>
-
 </body>
 </html>
