--- a/video/比较.html
+++ b/video/比较.html
@@ -6,15 +6,15 @@
 <title>播放器 - 线上看</title>
 <script src="https://cdn.jsdelivr.net/npm/hls.js@1.5.1/dist/hls.min.js"></script>
 <style>
-
 body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #1a1a1a;  /* 深灰黑，比纯黑柔和 */
-    color: #eaeaea;  /* 白中带灰，护眼 */
+    background-color: #1f1f1f;  /* 柔和灰黑 */
+    color: #eaeaea;
 }
 
+/* 整体容器 */
 .container {
     display: flex;
     max-width: 1800px;
@@ -29,26 +29,24 @@ body {
     flex-direction: column;
 }
 
+/* 视频比例 */
 .video-wrapper {
     position: relative;
     width: 100%;
+    padding-top: 56.25%;
     background: #000;
-    border-radius: 10px;
-    overflow: visible;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
 #video {
     position: absolute;
     top: 0; left: 0;
     width: 100%;
-    height: auto;           /* 修复按钮显示问题 */
-    max-height: 900px;
+    height: 980px;
     object-fit: contain;
-    border-radius: 10px;
-    display: block;
 }
 
-/* 播放中覆盖文字 */
 #overlay {
     position: absolute;
     top: 0; left: 0;
@@ -70,20 +68,13 @@ body {
     display: flex;
     gap: 10px;
 }
-
 .video-controls button {
-    padding: 6px 16px;
-    background-color: #333;
-    color: #f2f2f2;
-    border: 1px solid #555;
-    border-radius: 6px;
+    padding: 5px 15px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
-    transition: background 0.2s, transform 0.1s;
-}
-
-.video-controls button:hover {
-    background-color: #555;
-    transform: scale(1.03);
 }
 
 /* 右侧面板 */
@@ -92,24 +83,22 @@ body {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    background-color: #202020;
-    border-radius: 10px;
-    padding: 12px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.4);
+    background-color: #242424;
+    border-radius: 8px;
+    padding: 10px;
 }
 
 /* 封面 */
 .right-panel .cover {
     text-align: center;
 }
-
 .right-panel .cover img {
     width: 150px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(255,255,255,0.05);
+    border-radius: 6px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
 }
 
-/* 剧集列表 */
+/* 剧集按钮排列（重点修改部分） */
 .playlist {
     display: flex;
     flex-wrap: wrap;
@@ -118,49 +107,46 @@ body {
 }
 
 .playlist button {
-    width: 40px;          /* 固定宽度 */
+    width: 60px;          /* 固定宽度 */
     height: 40px;         /* 固定高度 */
-    padding: 5px 10px;
-    background: #2a2a2a;
-    border: 1px solid #444;
-    color: #ddd;
     border-radius: 6px;
+    background-color: #333;
+    color: #eaeaea;
+    border: 1px solid #444;
     cursor: pointer;
+    font-size: 14px;
     transition: all 0.2s;
 }
 
 .playlist button:hover {
-    background-color: #444;
+    background-color: #555;
 }
 
 .playlist button.active {
     background-color: #007bff;
-    color: #fff;
+    color: white;
+    border-color: #007bff;
 }
 
 /* 详情卡片 */
 .details {
     background: #2a2a2a;
     color: #f0f0f0;
-    padding: 12px;
+    padding: 10px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.3);
     max-height: 400px;
     overflow-y: auto;
 }
-
 .details h1 {
     font-size: 1.3em;
     margin: 0 0 10px;
-    color: #fff;
 }
-
 .details p {
-    margin: 6px 0;
-    color: #ddd;
+    margin: 5px 0;
 }
 
-/* 剧情弹出框 */
+/* 弹出右侧简介 */
 #descriptionModal {
     display: none;
     position: fixed;
@@ -171,32 +157,20 @@ body {
     justify-content: flex-end;
     padding: 20px;
 }
-
 #descriptionModal .modal-content {
-    background: #2b2b2b;
-    color: #f2f2f2;
+    background: #fff;
     width: 300px;
     height: 100%;
     overflow-y: auto;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(255,255,255,0.05);
 }
-
 #descriptionModal button {
     margin-top: 10px;
-    padding: 6px 12px;
-    background: #444;
-    color: #fff;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
+    padding: 5px 10px;
 }
 
-#descriptionModal button:hover {
-    background: #666;
-}
-
+/* 响应式 */
 @media (max-width: 900px) {
     .container {
         flex-direction: column;
@@ -214,11 +188,10 @@ body {
         max-height: 70%;
     }
 }
-
 </style>
 </head>
 <body>
-<!-- ✅ 你的结构和脚本保持原样 -->
+
 <div class="container">
     <div class="left-panel">
         <div class="video-wrapper">
@@ -248,6 +221,7 @@ body {
     </div>
 </div>
 
+<!-- 弹出右侧简介 -->
 <div id="descriptionModal">
     <div class="modal-content">
         <p id="description"></p>
@@ -256,7 +230,6 @@ body {
 </div>
 
 <script>
-/* ✅ 保留你原始 JS 完全不变 */
 const video = document.getElementById('video');
 const playlist = document.getElementById('playlist');
 const overlay = document.getElementById('overlay');
